--- a/index.Rmd
+++ b/index.Rmd
@@ -16,3 +16,6 @@ Hello! I'm Aung.Here is my personal website where I share my academic and profes
 
 * [My Resume](Aung Resume.pdf)
 
+## Link to Homework 4
+
+* [Plotly](plotly.html)
